--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <style>
+      section {
+        padding: 3.75rem 0;
+      }
+    </style>
   </head>
   <body>
-    <div
-      class="d-flex justify-content-between px-5 border border-4 border-danger"
-    >
-      <h1 class="text-center fs-1 text-capitalize mt-2 pt-4">hello</h1>
-      <h1 class="text-center fs-1 text-capitalize mt-2 pt-4">hello</h1>
-    </div>
+    <!-- navbar -->
+
+    <!-- intro -->
+    <section id="intro">
+      <div class="contanier-lg">
+        <div class="row gx-0 justify-content-center align-items-center">
+          <div class="col-md-5 text-center text-md-start">
+            <h1>
+              <div class="display-2">Black-Belt</div>
+              <div class="display-5">Your coding skills</div>
+            </h1>
+            <p class="lead my-4 text-muted">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore,
+              expedita?
+            </p>
+            <a href="#pricing" class="btn btn-secondary text-white btn-lg">
+              buy now
+            </a>
+          </div>
+          <div class="col-md-5 d-none d-md-block">
+            <img
+              class="img-fluid"
+              src="assets/ebook-cover.png"
+              alt="ebook cover"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
