:sparkles: Add navbar section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,47 @@
   </head>
   <body>
     <!-- navbar -->
+    <navbar class="navbar sticky-top navbar-expand-md bg-white">
+      <div class="container-xxl">
+        <a href="#intro" class="navbar-brand">
+          <span class="text-secondary fw-bold text-capitalize">the book</span>
+        </a>
+
+        <!-- mobile icon toggler -->
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#main-nav"
+          aria-controls="main-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- navbar links in desktop screen -->
+        <div
+          class="collapse navbar-collapse justify-content-end align-items-center"
+          id="main-nav"
+        >
+          <ul class="navbar-nav text-end">
+            <li class="nav-item">
+              <a class="nav-link" href="#topics">About the Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reviews">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Get in Touch</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </navbar>
 
     <!-- intro -->
     <section id="intro">
