:sparkles: Add pricing plans section

--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
             <li class="nav-item">
               <a class="nav-link" href="#pricing">Pricing</a>
             </li>
+            <li class="nav-item ms-2 d-none d-md-block">
+              <a
+                class="nav-link btn btn-secondary bg-secondary text-white"
+                href="#pricing"
+                >Buy Now</a
+              >
+            </li>
           </ul>
         </div>
       </div>
     </navbar>
 
-    <!-- intro -->
+    <!-- intro section -->
     <section id="intro">
       <div class="contanier-lg">
         <div class="row gx-0 justify-content-center align-items-center">
@@ -81,6 +88,73 @@
               src="assets/ebook-cover.png"
               alt="ebook cover"
             />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- pricing section -->
+    <section id="pricing" class="mt-5 bg-light">
+      <div class="container-lg">
+        <div class="text-center">
+          <h2>Pricing Plans</h2>
+          <p class="text-muted lead">Choose a pricing plan to suit you.</p>
+        </div>
+
+        <div class="row justify-content-center align-items-center gx-0 my-5">
+          <div class="col-8 col-lg-4 col-xl-3">
+            <div class="card border-0">
+              <div class="card-body text-center py-4">
+                <h5 class="card-title text-capitalize">starter edition</h5>
+                <p class="card-subtitle lead">eBook download only</p>
+                <h1 class="display-5 fw-bold text-primary my-4">$12.99</h1>
+                <p class="card-text text-muted mx-5 d-none d-lg-block">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-lg mt-0 text-capitalize"
+                  >buy now</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-9 col-lg-4">
+            <div class="card border-2 border-primary">
+              <p class="card-header text-capitalize text-primary text-center">
+                most popular
+              </p>
+              <div class="card-body text-center py-5">
+                <h5 class="card-title text-capitalize">complete edition</h5>
+                <p class="card-subtitle lead">eBook download & all updates</p>
+                <h1 class="display-5 fw-bold text-primary my-4">$18.99</h1>
+                <p class="card-text text-muted mx-5 d-none d-lg-block">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-lg mt-0 text-capitalize"
+                  >buy now</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-8 col-lg-4 col-xl-3">
+            <div class="card border-0">
+              <div class="card-body text-center py-4">
+                <h5 class="card-title text-capitalize">ultimate edition</h5>
+                <p class="card-subtitle lead">download, updates & extras</p>
+                <h1 class="display-5 fw-bold text-primary my-4">$24.99</h1>
+                <p class="card-text text-muted mx-5 d-none d-lg-block">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-lg mt-0 text-capitalize"
+                  >buy now</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </div>
