--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <!-- intro section -->
     <section id="intro">
-      <div class="contanier-lg">
-        <div class="row gx-0 justify-content-center align-items-center">
+      <div class="container-lg">
+        <div class="row align-items-center justify-content-between">
           <div class="col-md-5 text-center text-md-start">
             <h1>
               <div class="display-2">Black-Belt</div>
@@ -160,6 +160,198 @@
       </div>
     </section>
 
+    <!-- topics at a glance -->
+    <section id="topics">
+      <div class="container-md">
+        <div class="text-center">
+          <h2 class="text-capitalize">inside the book...</h2>
+          <p class="lead text-muted">
+            A quick glance at the topics you'll learn
+          </p>
+        </div>
+
+        <div class="row my-5 justify-content-around g-5 align-items-center">
+          <div class="col-6 col-lg-4">
+            <img src="assets/kindle.png" class="img-fluid" alt="kindle image" />
+          </div>
+
+          <div class="col-lg-6">
+            <div class="accordion" id="chapters">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-1"
+                    aria-expanded="true"
+                    aria-controls="chapter-1"
+                  >
+                    Chapter 1 - Your First Web Page
+                  </button>
+                </h2>
+                <div
+                  id="chapter-1"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-2"
+                    aria-expanded="true"
+                    aria-controls="chapter-2"
+                  >
+                    Chapter 2 - Mastering CSS
+                  </button>
+                </h2>
+                <div
+                  id="chapter-2"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-3"
+                    aria-expanded="true"
+                    aria-controls="chapter-3"
+                  >
+                    Chapter 3 - The Power Of JavaScript
+                  </button>
+                </h2>
+                <div
+                  id="chapter-3"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-4"
+                    aria-expanded="true"
+                    aria-controls="chapter-4"
+                  >
+                    Chapter 4 - Storing Data (Firesbase Databases)
+                  </button>
+                </h2>
+                <div
+                  id="chapter-4"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-5"
+                    aria-expanded="true"
+                    aria-controls="chapter-5"
+                  >
+                    Chapter 5 - UI And UX
+                  </button>
+                </h2>
+                <div
+                  id="chapter-5"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-6"
+                    aria-expanded="true"
+                    aria-controls="chapter-6"
+                  >
+                    Chapter 6 - User Authentication
+                  </button>
+                </h2>
+                <div
+                  id="chapter-6"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                    laudantium perferendis accusantium impedit distinctio maxime
+                    reiciendis quidem deserunt! Vero provident quisquam modi
+                    odio illum dolorem veniam autem officia nulla ab delectus
+                    nihil fugit natus reprehenderit laborum dicta, quod
+                    voluptatibus deserunt!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
