--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <!-- topics at a glance -->
     <section id="topics">
-      <div class="container-md">
+      <div class="container-lg">
         <div class="text-center">
           <h2 class="text-capitalize">inside the book...</h2>
           <p class="lead text-muted">
@@ -351,7 +351,68 @@
       </div>
     </section>
 
-    
+    <!-- reviews section -->
+    <section id="reviews" class="bg-light">
+      <div class="container">
+        <div class="text-center">
+          <h2>book reviews</h2>
+          <p class="lead text-muted">
+            What my students have said about the book...
+          </p>
+        </div>
+        <div class="row my-5 justify-content-center">
+          <div class="col-lg-8">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <h5 class="mb-1 text-secondary">
+                  A must buy for every aspiring web dev
+                </h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Harum, sequi consequuntur delectus necessitatibus libero a,
+                  provident consectetur porro dicta dolore esse sapiente
+                  voluptate molestiae beatae itaque rerum maiores dolor
+                  explicabo amet? Dignissimos, ducimus blanditiis. Quasi
+                  necessitatibus quibusdam perferendis dolor ad!
+                </p>
+                <small class="text-muted fw-bold">Review by Mark</small>
+              </div>
+            </div>
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <h5 class="mb-1 text-secondary">This book is a life saver!!</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Harum, sequi consequuntur delectus necessitatibus libero a,
+                  provident consectetur porro dicta dolore esse sapiente
+                  voluptate molestiae beatae itaque rerum maiores dolor
+                  explicabo amet? Dignissimos, ducimus blanditiis. Quasi
+                  necessitatibus quibusdam perferendis dolor ad!
+                </p>
+                <small class="text-muted fw-bold">Review by Linda</small>
+              </div>
+            </div>
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <h5 class="mb-1 text-secondary">
+                  This book is so informative highly recommended
+                </h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Harum, sequi consequuntur delectus necessitatibus libero a,
+                  provident consectetur porro dicta dolore esse sapiente
+                  voluptate molestiae beatae itaque rerum maiores dolor
+                  explicabo amet? Dignissimos, ducimus blanditiis. Quasi
+                  necessitatibus quibusdam perferendis dolor ad!
+                </p>
+                <small class="text-muted fw-bold">Review by Jackii</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
