:sparkles: Add reviews section

--- a/index.html
+++ b/index.html
@@ -363,10 +363,8 @@
         <div class="row my-5 justify-content-center">
           <div class="col-lg-8">
             <div class="list-group">
-              <div class="list-group-item py-3">
-                <h5 class="mb-1 text-secondary">
-                  A must buy for every aspiring web dev
-                </h5>
+              <div class="list-group-item py-3 list-group-item-primary">
+                <h5 class="mb-2">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Harum, sequi consequuntur delectus necessitatibus libero a,
@@ -377,10 +375,8 @@
                 </p>
                 <small class="text-muted fw-bold">Review by Mark</small>
               </div>
-            </div>
-            <div class="list-group">
-              <div class="list-group-item py-3">
-                <h5 class="mb-1 text-secondary">This book is a life saver!!</h5>
+              <div class="list-group-item py-3 list-group-item-info">
+                <h5 class="mb-2">This book is a life saver!!</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Harum, sequi consequuntur delectus necessitatibus libero a,
@@ -391,10 +387,8 @@
                 </p>
                 <small class="text-muted fw-bold">Review by Linda</small>
               </div>
-            </div>
-            <div class="list-group">
-              <div class="list-group-item py-3">
-                <h5 class="mb-1 text-secondary">
+              <div class="list-group-item py-3 list-group-item-danger">
+                <h5 class="mb-2">
                   This book is so informative highly recommended
                 </h5>
                 <p class="mb-1">
