--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <style>
       section {
         padding: 3.75rem 0;
@@ -19,7 +23,9 @@
     <navbar class="navbar sticky-top navbar-expand-md bg-white">
       <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
-          <span class="text-secondary fw-bold text-capitalize">the book</span>
+          <span class="text-secondary fw-bold text-capitalize"
+            ><i class="bi bi-book-half"></i> the book</span
+          >
         </a>
 
         <!-- mobile icon toggler -->
@@ -355,7 +361,9 @@
     <section id="reviews" class="bg-light">
       <div class="container">
         <div class="text-center">
-          <h2>book reviews</h2>
+          <h2 class="text-capitalize">
+            <i class="bi bi-stars"></i> book reviews
+          </h2>
           <p class="lead text-muted">
             What my students have said about the book...
           </p>
@@ -364,6 +372,13 @@
           <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3 list-group-item-primary">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-2">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -376,6 +391,13 @@
                 <small class="text-muted fw-bold">Review by Mark</small>
               </div>
               <div class="list-group-item py-3 list-group-item-info">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
                 <h5 class="mb-2">This book is a life saver!!</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -388,6 +410,13 @@
                 <small class="text-muted fw-bold">Review by Linda</small>
               </div>
               <div class="list-group-item py-3 list-group-item-danger">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
                 <h5 class="mb-2">
                   This book is so informative highly recommended
                 </h5>
