--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
             <a href="#pricing" class="btn btn-secondary text-white btn-lg">
               buy now
             </a>
+            <!-- sidebar -->
+            <a
+              class="d-block mt-3"
+              data-bs-toggle="offcanvas"
+              href="#sidebar"
+              role="button"
+              aria-controls="sidebar"
+            >
+              Explore my other books
+            </a>
           </div>
           <div class="col-md-5 d-none d-md-block">
             <span
@@ -561,7 +571,7 @@
     </section>
 
     <!-- modal itself -->
-   <div
+    <div
       class="modal fade"
       id="reg-modal"
       tabindex="-1"
@@ -608,7 +618,32 @@
       </div>
     </div>
 
-    
+    <!-- offcanvas -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="sidebar"
+      aria-labelledby="sidebar-label"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="sidebar-label">My other books</h5>
+
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="offcanvas-body">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum aut
+          similique reiciendis quaerat nostrum maiores, inventore expedita vero
+          architecto porro!
+        </p>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
