:sparkles: Add carousel section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       .cursor-pointer {
         cursor: pointer;
       }
+      .height-vh {
+        height: 75vh;
+      }
     </style>
   </head>
   <body>
@@ -664,7 +667,8 @@
       </div>
     </div>
 
-    <section>
+    <section class="my-2">
+      <h2 class="display-5 text-center mb-5 fw-bold">Ocean Gallery</h2>
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button
@@ -689,14 +693,26 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="..." />
+          <div class="carousel-item height-vh active">
+            <img
+              src="https://w.forfun.com/fetch/c4/c45468b1f55346db545c15f96369f5c8.jpeg"
+              class="d-block w-100 object-fit-cover"
+              alt="..."
+            />
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
+          <div class="carousel-item height-vh object-fit-cover">
+            <img
+              src="https://img.goodfon.com/original/2560x1600/3/29/more-okean-voda-volna-zakat.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
+          <div class="carousel-item height-vh object-fit-cover">
+            <img
+              src="https://i.pinimg.com/originals/9f/06/08/9f06085fb97435d1bce48c840496fef3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
           </div>
         </div>
         <button
