--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <navbar class="navbar sticky-top navbar-expand-md bg-white">
+    <navbar class="navbar sticky-top navbar-expand-md bg-white shadow-sm py-3">
       <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
           <span class="text-secondary fw-bold text-capitalize"
@@ -667,6 +667,7 @@
       </div>
     </div>
 
+    <!-- carousel section -->
     <section class="my-2">
       <h2 class="display-5 text-center mb-5 fw-bold">Ocean Gallery</h2>
       <div id="carouselExampleIndicators" class="carousel slide">
