--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
           </div>
           <div class="carousel-item height-vh object-fit-cover">
             <img
-              src="https://img.goodfon.com/original/2560x1600/3/29/more-okean-voda-volna-zakat.jpg"
+              src="https://i.pinimg.com/originals/61/9e/bc/619ebcc8060d0b6838e99f2a5d7cbd83.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -737,7 +737,7 @@
       </div>
     </section>
 
-    <!-- footer -->
+    <!-- footer section  -->
     <footer class="bg-body-tertiary text-center">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
@@ -830,6 +830,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+      // tooltips logic
       const tooltips = document.querySelectorAll(".tt");
       tooltips.forEach((e) => {
         new bootstrap.Tooltip(e);
